test/fail/MisformedTypeSignature.agda
module MisformedTypeSignature where

postulate A : Set

(f g) : A
